[package]
description = "Arrow assets service REST client"
keywords    = ["vtol", "client", "rest", "assets"] # max 5
name        = "svc-assets-client-rest"
version     = "0.4.2-develop.2"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[dependencies]
chrono        = { version = "0.4", features = ["serde"] }
ordered-float = { version = "4.1", features = ["serde"] }
serde         = "1.0"
serde_json    = "1.0"

[dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/Arrow-air/lib-common.git"
tag      = "latest-develop"

# Get Geo types from storage client
[dependencies.svc-storage-client-grpc]
git = "https://github.com/Arrow-air/svc-storage"
tag = "latest-develop"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.33", features = ["full"] }

[dependencies.utoipa]
features = ["axum_extras", "chrono"]
version  = "4.0"

[[example]]
name = "rest"
