[package]
description = "Aetheric assets service REST client"
keywords    = ["vtol", "client", "rest", "assets"]  # max 5
name        = "svc-assets-client-rest"
version     = "0.5.0"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[dependencies]
ordered-float = { version = "4.3", features = ["serde"] }
serde         = "1.0"
serde_json    = "1.0"

[dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/aetheric-oss/lib-common.git"
tag      = "v3.0.0"

# Get types from storage client
[dependencies.svc-storage-client-grpc]
features = ["vehicle", "vertiport", "vertipad", "group"]
git      = "https://github.com/aetheric-oss/svc-storage"
tag      = "v0.12.1"

[dev-dependencies]
http-body-util = { version = "0.1" }
hyper          = { version = "1.4", features = ["full"] }
hyper-util     = { version = "0.1" }
tokio          = { version = "1.40", features = ["full"] }

[dependencies.utoipa]
features = ["axum_extras", "chrono"]
version  = "4.2"

[[example]]
name = "rest"

# https://github.com/xd009642/tarpaulin?tab=readme-ov-file#ignoring-code-in-files
# removes warnings introduced by rust 1.8
# can be removed when the cfg attributes can be replaced with `#[coverage(off)]` (currently only available in nightly)
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
